# Heinrich

./: README.md  requirment.txt
1.Data/: data_research.py  requirmentst.txt
2.Event Labeling/: 2regime_daily_only_iqr.xlsx  2regime_weekly_iqr.xlsx  env_data_ffilll.py  env_data_original.py
2.Event Labeling/data/: 2regime_all_daily_ffill_iqr.xlsx  2regime_monthly_iqr.xlsx  regime_common_iqr_2020_2024.xlsx  regime_common_iqr_daily_ffill.xlsx
3. Regime/: new_indicator_data_2020_2024.xlsx  regime.py
3.Regime/: heinrich_regime_outputs.xlsx  indicator_data_2006_2024.xlsx
Layer3/: .env  .env_example  .env_sample  .gitignore  README.md  analysis.txt  fundamentals_log.txt  insider_log.txt  pyproject.toml  run_backtest_script.py  scoring_log.txt  분류.json
Layer3/.claude/: settings.json
Layer3/backtest/: __init__.py  metrics.py  runner.py  simulator.py
Layer3/data_pipeline/: __init__.py  classification_loader.py  db_manager.py  earnings_fetcher.py  fundamentals_fetcher.py  insider_fetcher.py  sp500_fetcher.py
Layer3/scoring/: engine.py  portfolio.py  regime.py  risk_filter.py  track_a.py  track_d.py
Layer3/z_docs/: architecture.md  db.md  layer1_2.md  log.md  main.md  phase2_1_implementation_guide.md  plan.md  rules.md  schema.md  setup.md  source.md  stock_filter.md  task_log.md  task_plan.md
